--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -36,8 +36,8 @@
   file:
     path: "{{ fluentd_config_path }}/conf.d"
     state: directory
-    owner: td-agent
-    group: td-agent
+    owner: "{{ fluentd_user }}"
+    group: "{{ fluentd_usergroup }}"
     mode: 0744
   tags: fluentd_config
 
@@ -45,8 +45,8 @@
   file:
     path: "{{ fluentd_log_path }}"
     state: directory
-    owner: td-agent
-    group: td-agent
+    owner: "{{ fluentd_user }}"
+    group: "{{ fluentd_usergroup }}"
     mode: 0744
   tags: fluentd_config
 
@@ -54,8 +54,8 @@
   template:
     src: "{{ item }}.j2"
     dest: "{{ fluentd_config_path }}/{{ item }}"
-    owner: td-agent
-    group: td-agent
+    owner: "{{ fluentd_user }}"
+    group: "{{ fluentd_usergroup }}"
     mode: 0644
   with_items:
     - conf.d/filter.conf
