--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,6 +14,9 @@ fluentd_user: td-agent
 fluentd_usergroup: td-agent
 
 # fluentd basic configuration
+fluentd_system_service_settings:
+  TD_AGENT_OPTIONS: ""
+
 fluentd_system_config:
   process_name: ansible-fluentd
 
